kubernetes/01-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: handson
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
