kubernetes/02-pod-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-frontend1
  namespace: handson
  labels:
    app: nginx
    tier: frontend
    order: "1"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-frontend2
  namespace: handson
  labels:
    app: nginx
    tier: frontend
    order: "2"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-backend1
  namespace: handson
  labels:
    app: nginx
    tier: backend
    order: "1"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-backend2
  namespace: handson
  labels:
    app: nginx
    tier: backend
    order: "2"
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
