kubernetes/04-service.headless.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-frontend
  namespace: handson
  labels:
    app: nginx
    tier: frontend
spec:
  hostname: front
  subdomain: api
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx-backend
  namespace: handson
  labels:
    app: nginx
    tier: backend
spec:
  hostname: back
  subdomain: api
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless-svc
  namespace: handson
spec:
  selector:
    app: nginx
  clusterIP: None
