kubernetes/05-configmaps.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: handson
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:latest
    ports:
    - name: default
      containerPort: 80
    - name: test1
      containerPort: 30001
    - name: test2
      containerPort: 30002
    volumeMounts:
      - mountPath: /etc/nginx/conf.d/test-server.conf
        readOnly: true
        name: nginx-conf
        subPath: test-server.conf
  volumes:
    - name: nginx-conf
      configMap:
        name: nginx-conf
        items:
          - key: test-server.conf
            path: test-server.conf
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  namespace: handson
spec:
  selector:
    app: nginx
  ports:
    - name: default
      protocol: TCP
      port: 80
      targetPort: 80
    - name: test1
      protocol: TCP
      port: 8081
      targetPort: 30001
    - name: test2
      protocol: TCP
      port: 8082
      targetPort: 30002
  type: LoadBalancer
