kubernetes/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
    - host: nginx.info
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 80
          - path: /test1
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 30001
          - path: /test2
            pathType: Exact
            backend:
              service:
                name: nginx-svc
                port:
                  number: 30002
